--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -12,7 +12,7 @@ COPY --from=armbuilder qemu-aarch64-static /usr/bin
 
 ENV OPAMYES=true
 
-RUN apk --no-cache add opam m4 git make \
+RUN apk --no-cache add bash opam m4 git make \
                        libc-dev ocaml-compiler-libs ocaml-ocamldoc \
 \
 && opam init  --disable-sandboxing  -y \
