--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -12,7 +12,7 @@ COPY --from=armbuilder qemu-aarch64-static /usr/bin
 
 ENV OPAMYES=true
 
-RUN apk --no-cache add bash opam m4 git make \
+RUN apk --no-cache add opam m4 git make \
                        libc-dev ocaml-compiler-libs ocaml-ocamldoc \
 \
 && opam init  --disable-sandboxing  -y \
@@ -29,7 +29,7 @@ COPY --from=builder /root/.opam/default/bin/google-drive-ocamlfuse /bin/google-d
 
 ENV PATH="/container/scripts:${PATH}"
 
-RUN apk add --no-cache fuse libgmpxx sqlite-libs libcurl libressl ncurses-libs
+RUN apk add --no-cache bash fuse libgmpxx sqlite-libs libcurl libressl ncurses-libs
 
 COPY . /container/
 ENTRYPOINT ["/container/scripts/entrypoint.sh"]
